Android: added the custom ListAdapter for the layers spinner.